--- a/style.css
+++ b/style.css
@@ -1,1 +1,11 @@
 
+@media screen and (max-width: 600px){
+    nav li {
+  float: none;  
+   text-align: right; 
+   width: 100%
+    }
+}
+footer p {
+    display: none;
+}
